# camera_robot

./: README.md  package.xml  setup.cfg  setup.py
camera_robot/: camera_viewer.py  deep_pallet_detector.py  goal_navigator.py  lidar_viewer.py  offline_inference_rgbd.py  pallet_data_collector.py  pallet_detector.py  pallet_detector_simple.py  pallet_pickup_mission.py  robot_controller.py
camera_robot/efficientpose_lib/: config.py
config/: nav2_params.yaml  slam_params.yaml
launch/: camera_config.launch.py  complete.launch.py  navigation.launch.py  pallet_pickup.launch.py  robot.launch.py  slam.launch.py  spawn_robot.launch.py
models/camera_robot/: model.config  model.sdf
models/pallet/: model.config  model.sdf
worlds/: empty.world
